:tada: initial commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,10 @@
 {
-  "extends": "devine/react"
+  "extends": "devine/react",
+  "rules": {
+    "react/jsx-key": 0
+  },
+  "globals": {
+    "ReactDOMFiber": true,
+    "React": true
+  }
 }
